--- a/package.json
+++ b/package.json
@@ -5,10 +5,23 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
+    "build": "astro check && tsc --noEmit && astro build",
+    "preview": "astro preview",
+    "lint": "eslint --ext .js,.astro,.ts,.tsx src",
+    "format": "prettier --write \"src/**/*.+(js|json|astro)\"",
+    "validate": "yarn lint && yarn format",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "astro": "^1.0.0-beta.73"
+    "@typescript-eslint/parser": "^5.30.7",
+    "astro": "^1.0.0-beta.73",
+    "eslint": "^8.20.0",
+    "eslint-plugin-astro": "^0.15.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "husky": "^8.0.0"
+  },
+  "dependencies": {
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.1.2"
   }
 }
