--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "noEmit": true,
+    "baseUrl": "./src",
     // Enable top-level await, and other modern ESM features.
     "target": "ESNext",
     "module": "ESNext",
@@ -11,5 +13,6 @@
     "isolatedModules": true,
     // Add type definitions for our Astro runtime.
     "types": ["astro/client"]
-  }
+  },
+  "exclude": ["node_modules"]
 }
