--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "eslint": "^8.20.0",
     "eslint-plugin-astro": "^0.15.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "husky": "^8.0.0"
-  },
-  "dependencies": {
+    "husky": "^8.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.1.2"
   }
