--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@astrojs/react": "^0.4.2",
     "@typescript-eslint/parser": "^5.30.7",
     "astro": "^1.0.0-beta.73",
     "eslint": "^8.20.0",
@@ -20,7 +21,9 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "husky": "^8.0.0",
     "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.1.2"
+    "prettier-plugin-astro": "^0.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@fontsource/open-sans": "^4.5.10"
