--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@astrojs/mdx": "^0.10.2",
     "@astrojs/react": "^0.4.2",
     "@typescript-eslint/parser": "^5.30.7",
     "astro": "^1.0.0-beta.73",
