adding experiment and new note

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@fontsource/open-sans": "^4.5.10"
+    "@fontsource/open-sans": "^4.5.10",
+    "gsap": "^3.11.1"
   }
 }
