--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
+    "@astrojs/netlify": "^1.3.0",
     "@fontsource/comic-mono": "^4.5.3",
     "gsap": "^3.11.1"
   }
