--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && tsc --noEmit && astro build",
+    "build": "astro build",
     "preview": "astro preview",
-    "lint": "eslint --ext .js,.astro,.ts,.tsx src",
+    "lint": "eslint --ext .js,.astro src",
     "format": "prettier --write \"src/**/*.+(js|json|astro)\"",
     "validate": "yarn lint && yarn format",
     "prepare": "husky install"
