updating astro and tweaking

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@astrojs/netlify": "^3.0.1",
     "@astrojs/prism": "^3.0.0",
     "@fontsource/comic-mono": "^4.5.3",
-    "gsap": "^3.11.1"
+    "gsap": "^3.11.1",
+    "slugify": "^1.6.6"
   }
 }
