--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@components/*": ["src/components/*"],
       "@layouts/*": ["src/layouts/*"],
       "@drawings/*": ["src/components/drawings/*"],
-      "@experiments/*": ["src/components/experiments/*"]
+      "@experiments/*": ["src/components/experiments/*"],
+      "@utilities/*": ["src/utilities/*"]
     }
   }
 }
