--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --port 3000",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
@@ -13,20 +13,20 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^2.0.1",
-    "@astrojs/react": "^3.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "astro": "^4.0.4",
-    "eslint": "^8.20.0",
-    "eslint-plugin-astro": "^0.15.0",
+    "@astrojs/mdx": "^2.0.3",
+    "@astrojs/react": "^3.0.9",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "astro": "^4.0.9",
+    "eslint": "^8.56.0",
+    "eslint-plugin-astro": "^0.31.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "husky": "^8.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@astrojs/netlify": "^3.1.1",
