adding portfolio, prototype post, tidying blockquotes etc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "@layouts/*": ["src/layouts/*"],
       "@drawings/*": ["src/components/drawings/*"],
       "@experiments/*": ["src/components/experiments/*"],
-      "@utilities/*": ["src/utilities/*"]
+      "@utilities/*": ["src/utilities/*"],
+      "@images/*": ["src/images/*"]
     }
   }
 }
