--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@astrojs/netlify": "^5.1.2",
     "@astrojs/prism": "^3.0.0",
     "@fontsource/comic-mono": "^4.5.3",
-    "gsap": "^3.11.1",
+    "@gsap/react": "^2.1.0",
+    "gsap": "^3.12.5",
     "slugify": "^1.6.6"
   }
 }
